2019-1/230/users/4054/executions/1641_1802.log
== TEST (2019-04-09 10:37:22) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = (5+D1)**0.5 + pi**(D2/3)
print(dano)
-- OUTPUT:
12.319094143872537
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:37:45) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = (5*D1)**0.5 + pi**(D2/3)
print(dano)
-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:24) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2/3))
print(dano)
-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:39:45) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2/3))
total = a - dano
-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:27) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2/3))
total = a - dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:41:39) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2/3))
total = a - % dano
print(total)
-- ERROR:
File "XXXX", line 6
    total = a - % dano
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:41:46) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2/3))
total = a -  dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:29) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2//3))
total = a -  dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:42:59) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2//3))
total = a -  dano
print(round(total, 0))
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:43:31) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2//3))
total = a -  dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:43:39) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2//3))
total = a -  dano
print(total)
-- EXECUTION TIME:
0.146819
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
187.89432762141087
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
284.653170023859
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496.7639320225002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:43:41) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2//3))
total = a -  dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:48:33) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5 + pi**(D2/3))
total = a -  dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:31) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5) + (pi**(D2/3))
total = a -  dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:36) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5) + (pi**(D2/3))
total = a -  dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:55:01) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5) + (pi**(D2/3))
total = a - /dano
print(total)
-- ERROR:
File "XXXX", line 6
    total = a - /dano
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:12) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5) + (pi**(D2/3))
total = a - dano
print(int(f(total))
-- ERROR:
File "XXXX", line 8
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:56:28) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5) + (pi**(D2/3))
total = a - dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 17:10:09) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5) + (pi**(D2/3))
total = a - dano
print(total)
-- OUTPUT:
187.89432762141087
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 17:25:14) 
-- CODE:
from math import*
a = int(input())
D1 = int(input())
D2 = int(input())
dano = ((5*D1)**0.5) + (pi**(D2/3))
dano = int(dano)
total = a - dano
print(total)
-- EXECUTION TIME:
0.188347
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
